[metadata]
name = vault_wrapper
version = 0.3.4

description = Hvac wrapper to automate enabling kv engines.
url = https://github.com/JoelLefkowitz/vault-wrapper

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords = 
    vault
    hvac

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[portfolio]
project_type = Pypi package
status = In development
homepage = https://vault_wrapper.readthedocs.io

languages = 
    Python

paradigms = 
    Object oriented programming

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
